infrastructure/vault/templates/vault-ui-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault-ui-gateway
  namespace: vault
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vault-ui-tls-secret
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui-route
  namespace: vault
spec:
  parentRefs:
    - name: vault-ui-gateway
      sectionName: https
  hostnames:
    - vault-ui.mirecloud.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name:   vault-ui
          port: 8200
